--- a/css/frame.css
+++ b/css/frame.css
@@ -87,6 +87,7 @@
 .padding-15{padding-left: 15px;padding-right: 15px;}
 .padding-37{padding-left:37px;padding-right:37px;}
 .padding-t-15{padding-top: 15px;}
+.padding-t-65{padding-top: 65px;}
 .padding-r-25{padding-right: 25px;}
 
 
