--- a/css/base.css
+++ b/css/base.css
@@ -8,7 +8,7 @@ img{/*max-height:100%;会导致百度地图不能用*/max-width:100%;*height:100
 body{
 	font-family: 'Microsoft YaHei',"Helvetica Neue", Helvetica, 'Hiragino Sans GB',  'WenQuanYi Micro Hei', Arial,sans-serif;
 	overflow-x: hidden;
-	
+	font-size: 14px;
     color: #666;
     }
 input{border:none;}
