--- a/css/base.css
+++ b/css/base.css
@@ -1,8 +1,10 @@
 *{box-sizing: border-box;margin:0;padding:0;}
 a{text-decoration: none;cursor: pointer;}
-a:visited{color:inherit;}
+/*a:visited{color:inherit;}*/
 a:link{color:inherit;}
 ul{list-style: none;}
+button{border:none;}
+button:focus{outline: none;}
 img{/*max-height:100%;会导致百度地图不能用*/max-width:100%;*height:100%;*width:100%;margin:auto;}
  
 body{
