--- a/css/button.css
+++ b/css/button.css
@@ -1,5 +1,5 @@
 .btnRow{position: relative;}
-.button{cursor: pointer;}
+
 .button .icon{vertical-align: middle;}
 
 /*heart-btn start*/
@@ -56,7 +56,7 @@
     position: relative;
 }
 
-.tag{margin-left: 10px;margin-top: 5px;}
+
 .tag-green{
     border:1px solid #6eb92b;
     border-radius: 10px;
@@ -104,5 +104,59 @@
 }
 /*btn-num02 end*/
 
+
+/*loginZone form start*/
+.loginZone{position: relative;}
+.loginZone .login-form{
+    text-align:left;
+    width: 37%;
+    margin: 0 auto; 
+    background: #deeffd;
+    border: 1px solid rgba(255,255,255,.3);
+    -moz-box-shadow: 0 3px 0 rgba(12,12,12,.03);
+    -webkit-box-shadow: 0 3px 0 rgba(12,12,12,.03);
+    box-shadow: 0 0 40px black;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    padding: 30px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;  
+}    
+.login-form .uname {
+    background: #fff url(../img/user.png) no-repeat 95% center;
+    color: #333;
+}
+.login-form .input-base {
+    display: block;
+    margin-top: 15px;
+}
+.login-form .pword {
+    background: #fff url(../img/locked.png) no-repeat 95% center;
+    color: #333;
+}
+.login-form .verify{display: inline-block;}
+.login-form .login{
+    display: block;width: 80%;margin:15px auto 0;
+    background-color: #1a7bb9;
+    border-color: #1a7bb9;
+    color: #FFF;
+    padding: 6px 12px;
+    border-radius: 5px;
+    
+}
+
+.tech-support{text-align: center;font-size: 12px; padding-top: 30px;}
+.loginZone{padding:50px 0;}
+.middleRow {
+    height: 200px;
+    background-color: #d6eafc;
+}
+
+/*loginZone form end*/
     
     
