--- a/css/mobile.css
+++ b/css/mobile.css
@@ -338,3 +338,32 @@ margin-top: 100%; /* margin 百分比相对父元素宽度计算 */
 .honorPic .hp-item{padding-top: 1rem;}
 .honorPic .hp-item img{width: 100%;height: 100%;}
 /*honorPic end*/
+
+/*typeRow02 start*/
+.tagRow02{text-align: right;}
+.tagRow02 .tag {
+    padding: .2rem .5rem;
+    text-align: center;
+    position: relative;
+}
+.tagRow02 .tag:after {
+    position: absolute;
+    left: 100%;
+    top: 34%;
+    content: " ";
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-left: 5px solid #6fba2a;
+}
+.tagRow02 .text02 {
+    margin-right: 1rem;
+}
+
+/*typeRow02 end*/
+
+.dBtn-row {
+    display: block;
+    text-align: center;
+    padding: .5rem;
+}
