--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,7 @@ body{
 	font-family: 'Microsoft YaHei',"Helvetica Neue", Helvetica, 'Hiragino Sans GB',  'WenQuanYi Micro Hei', Arial,sans-serif;
 	overflow-x: hidden;
 	font-size: 14px;
+	line-height: 22px;
     color: #666;
     }
 input{border:none;}
