--- a/css/frame.css
+++ b/css/frame.css
@@ -1,14 +1,21 @@
-.brandName{
-	padding: 30px 0;
-	font-size: 20px;
-	font-weight: 700;
-}
+
 .button,.link{cursor: pointer;}
+
+.middleTable{
+    display: table;
+}
+.middleTable .middleRow {
+    display: table-cell;
+    vertical-align: middle;
+    line-height: 30px;
+    height: auto;
+}
 
 .ellipsis{
   display:inline-block;*display:inline;zoom:1;text-align:center;
   max-width:100%;line-height:100%;
-  overflow: hidden;white-space: nowrap;text-overflow: ellipsis;
+  overflow: hidden;white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .img-center{position:absolute;top:0;bottom:0;right:0;left:0;max-height:100%;max-width:100%;*height:100%;*width:100%;margin:auto;}
 .container-p-15{
