--- a/css/barHeader.css
+++ b/css/barHeader.css
@@ -296,6 +296,19 @@
 .header02 .more{color:#888;}
 /*header02 end*/
 
+ /*header02 start*/
+.header03{
+  padding: 4px 18px;
+  display: block;
+  height: 26px;
+  line-height: 26px;
+  background-color: #f6f6f6;
+  text-align: left;
+}
+.header03 .h-title01float-l{font-size: 15px;}
+.header03 .more{color:#333;padding-left: 20px;background:url(../img/iconHome.png) no-repeat 0 50%;}
+/*header02 end*/
+
 /*footer01 start*/
 .footer01{box-sizing: content-box;background:#393939;padding-top: 38px;color:#ebebeb;text-align: left;}
 .footer01 .footer-link {border-bottom: 1px solid #4d4d4d;}
@@ -329,3 +342,18 @@
     font-size: 30px;
 }
 /*logoRow end*/
+
+/*a-title-header01 start*/
+.a-title-header01{border-bottom:1px dashed #c3c3c3;}
+.a-title-header01 .mainTitle{
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  padding-top:15px;
+}
+.a-title-header01 .articleTime{
+  text-align: center;
+  padding: 10px 0;
+  color: #c3c3c3;
+}
+/*a-title-header01 start*/
