--- a/css/frame.css
+++ b/css/frame.css
@@ -12,7 +12,7 @@
 }
 
 .ellipsis{
-  display:inline-block;*display:inline;zoom:1;text-align:center;
+  display:inline-block;*display:inline;zoom:1;/*text-align:center;*/
   max-width:100%;line-height:100%;
   overflow: hidden;white-space: nowrap;
   text-overflow: ellipsis;
@@ -92,6 +92,7 @@
 
 .hide{display: none;}
 
+.over-flow {overflow: auto;zoom: 1;}
 .clear:before,.clear:after{content:" ";display:table;}
 .clear:after{clear:both;}
 
