--- a/css/button.css
+++ b/css/button.css
@@ -56,7 +56,6 @@
     position: relative;
 }
 
-
 .tag-green{
     border:1px solid #6eb92b;
     border-radius: 10px;
@@ -75,6 +74,13 @@
     padding:0px 10px;
     display: inline-block;
 }
+.tag-black{
+    border:1px solid #171011;
+    border-radius: 10px;
+    padding:0px 10px;
+    display: inline-block;
+}
+.typeTag{text-transform: uppercase;}
 /*btn-num01 start*/
 .btn-num01{
     width: 25px;
@@ -158,5 +164,47 @@
 }
 
 /*loginZone form end*/
-    
+
+/*cl-details start*/
+.button.cl-details {
+    padding: 1px 5px 1px 12px;
+    background-color: #54a4d5;
+}
+/*cl-details end*/    
+
+/*form-content01 start*/
+.form-content01 form{width:100%;}
+.form-content01 form .m-form-line{text-align: left;}
+.form-content01 form .m-form-line .text{width: 63px;float: left;}
+.form-content01 form .m-form-line .m-form-block{
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding: 12px 0;
+}
+.form-content01 form .m-form-line .inputBox{margin-left: 63px;}
+.form-content01 form .m-form-line .text,
+.form-content01 form .m-form-line input{
+    height: 27px;
+    line-height: 27px;
+    display: block;
+    font-size: 14px;
+}
+.form-content01 form .m-form-line input,.form-content01 form .m-form-line textarea{
+    border:1px solid #efefef;
+    width: 100%;
+}
+.form-content01 form .m-form-line textarea{min-height: 110px;}
+.form-content01 form .m-form-line .m-btn{
+    width: 99px;
+    font-size: 13px;
+    font-weight: 700;
+    border:none;
+    color: #fff;
+    text-align: center;
+    padding:7px 0;
+    margin-right: 10px;
+    cursor: pointer;
+}
+/*form-content01 end*/
     
