--- a/css/content.css
+++ b/css/content.css
@@ -88,4 +88,83 @@
 }
 /*r-article01 end*/
 
+/*news-ul01 start*/
+.news-ul01{}
+.news-ul01 .newsRow{
+    padding:30px 0;
+    border-bottom: 1px dashed #c2c2c2;
+}
+.news-ul01 .newsRow .cl-pic{
+    width:177px;
+    padding:3px;
+    border:1px solid #eaeaea;
+}
+.news-ul01 .newsRow .cl-pic img{width:100%;display: block;}
+
+.news-ul01 .newsRow .cl-newsBox{text-align: left;}
+.news-ul01 .newsRow .cl-newsBox .cl-title .cl-p01{
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 32px;
+}
+.news-ul01 .newsRow .cl-newsBox .cl-title .cl-line{
+    border-bottom:1px solid #d5d5d5;
+    width: 60px;
+    min-height: 1px;
+}
+.news-ul01 .newsRow .cl-newsBox .cl-text{padding: 10px 0 5px;}
+.news-ul01 .newsRow .cl-newsBox .cl-btn .time{color: #c3c3c3;}
+
+/*news-ul01 start*/
+
+/*pagination0101 start*/
+.pagination01{text-align: center;padding: 18px 0 0;}
+.pagination01 ul{display: inline-block;}
+.pagination01 ul li{cursor: pointer;display: block;float: left;width: 20px;min-height:32px;margin: 0 7px;padding:5px 0;}
+.pagination01 ul li.left{background:url(../img/p-left.png) no-repeat 0 6px;}
+.pagination01 ul li.right{background:url(../img/p-right.png) no-repeat 0 6px;;}
+.pagination01 ul li.p_ellipsis{cursor: default;}
+.pagination01 ul li.on{background:url(../img/blue-bg.png) no-repeat 0 6px;;color: #fff;}
+/*pagination01 end*/
+
+/*adr_box01 start*/
+.adr_box01 p {
+    color: #9c9c9c;
+    font-size: 14px;
+    padding: 5px 50px;
+    background-color: #f6f6f6;
+    margin-bottom: 25px;
+    text-align: left;
+}
+.adr_box01 p.adr {
+    background-image: url(../img/adr.png);
+    background-repeat: no-repeat;
+    background-position: 18px;
+}
+.adr_box01 p.phone{
+    background-image: url(../img/phone.png);
+    background-repeat: no-repeat;
+    background-position: 18px;}
+.adr_box01 p.email{
+    background-image: url(../img/email.png);
+    background-repeat: no-repeat;
+    background-position: 18px;
+}
+/*adr_box01 end*/
+
+.qa-wrapper01{padding:30px 18px 0;text-align: left;}
+.qa-wrapper01 .qa-body{border: 1px solid #efefef;}
+.qa-wrapper01 .qa-body .qa-div .theme,
+.qa-wrapper01 .qa-body .qa-div .q-info,
+.qa-wrapper01 .qa-body .qa-div .question,
+.qa-wrapper01 .qa-body .qa-div .answer{
+    padding:10px 20px;
+    border-bottom: 1px solid #efefef;
+}
+.qa-wrapper01 .qa-body .qa-div .theme{font-weight: 700;}
+.qa-wrapper01 .qa-body .qa-div .question{padding-top:20px;padding-bottom:20px;}
+.qa-wrapper01 .qa-body .qa-div .answer .manager{display: block;}
+.qa-wrapper01 .qa-body .qa-div .answer .anwser-text{padding-left: 25px;}
+
+
 
