--- a/css/button.css
+++ b/css/button.css
@@ -207,4 +207,21 @@
     cursor: pointer;
 }
 /*form-content01 end*/
-    
+
+/*textTag01 start*/
+.textTag01 {
+    padding: 0.2rem 0.5rem;
+    text-align: center;
+    position: relative;
+}
+.textTag01:after {
+    position: absolute;
+    left: 100%;
+    top: 34%;
+    content: " ";
+    width: 0;
+    height: 0;
+    border: 5px solid transparent;
+    border-left: 5px solid #6fba2a;
+}
+/*textTag01 end*/
