--- a/css/frame.css
+++ b/css/frame.css
@@ -106,6 +106,7 @@
 .orange{color:#ff8702;}
 .gray{color:#C2C1C1;}
 .red{color: #ec5369;}
+.heavy-red{color:#ff8d99;}
 .black{color:#333;}
 
 .bg-light-gray02{background-color: #f0f0f0;}
