--- a/css/content.css
+++ b/css/content.css
@@ -228,4 +228,47 @@
 }
 /*content_list01 end*/
 
+/*foreword01 start*/
+.foreword01 {
+    padding-top: 45px;
+    width: 1180px;
+    margin: 0 auto;
+}
+.foreword01 .fTop img,
+.foreword01 .fBottom img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.foreword01 .fMiddle {
+    padding-left: 70px;
+    padding-right: 20px;
+    border-left: 2px solid #0d7bd4;
+    border-right: 2px solid #0d7bd4;
+    position: relative;
+    background: #fff;
+}
+.foreword01 .fMiddle .fLeft {
+    position: absolute;
+    left: -20px;
+    top: 16px;
+    background: url(../img/fLeft.png) no-repeat;
+    width: 65px;
+    height: 137px;
+    text-align: center;
+}
+.foreword01 .fMiddle .fLeft .w01 {
+    display: table-cell;
+    color: #fff;
+    font-weight: 700;
+    width: 30px;
+    font-size: 30px;
+    white-space: normal;
+    line-height: 33px;
+    vertical-align: middle;
+    height: 137px;
+    padding-left: 15px;
+}
+/*foreword 01 end*/
+
 
