--- a/css/frame.css
+++ b/css/frame.css
@@ -18,6 +18,10 @@
   text-overflow: ellipsis;
 }
 .img-center{position:absolute;top:0;bottom:0;right:0;left:0;max-height:100%;max-width:100%;*height:100%;*width:100%;margin:auto;}
+.container-auto{
+    padding-right: 15px;
+    padding-left: 15px;
+}
 .container-p-15{
 	padding: 15px;
 }
