--- a/css/slider.css
+++ b/css/slider.css
@@ -279,21 +279,53 @@
 /*ul_tab01 end*/
 
 /*glideWrapper01 start*/
+.glideWrapper01{position: relative;}
 .glideWrapper01 .link-l{
-  width: 240px;
+  width: 222px;
   height: 282px;
   position: absolute;
   left: 0;
   top: 100px;
   z-index: 999;
+  text-align: center;
 }
 .glideWrapper01 .link-l a{
   display: inline-block;
-  width: 222px;
+  width: 100%;
   height: 77px;
   line-height: 69px;
   color: #fff;
   text-decoration: none;
   font-size: 28px;
 }
+.glideWrapper01 .glide__slide {
+    
+    text-align: center;
+}
 /*glideWrapper01 end*/
+
+/*floatWindow_r01 start*/
+.floatWindow_r01{
+    background:#003a84;
+    width:120px;
+    position: fixed;
+    right: 0;
+    top: 50%;
+    z-index: 99;
+}
+.floatWindow_r01 a{
+    display: block;
+
+    height:43px;
+    line-height: 43px;
+    color:#fff;
+    background:#1b70dd;
+    text-align: center;
+    border-bottom: 1px solid #2d82bf;
+}
+.floatWindow_r01 a.backTop{background:url(../img/bTop.png)no-repeat;}
+/*floatWindow_r01 end*/
+
+ /*切换功能 start*/
+.switchHide{display: none;}
+.switchHide.on{display:block; }
