--- a/css/frame.css
+++ b/css/frame.css
@@ -22,6 +22,25 @@
     padding-right: 15px;
     padding-left: 15px;
 }
+
+.info_fail{
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+.info_success{
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+.info_box>div.info{
+    padding: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
 .container-p-15{
 	padding: 15px;
 }
