--- a/css/modalBox.css
+++ b/css/modalBox.css
@@ -169,7 +169,7 @@ button.close {
     height: 485px;
     width: 100%;
 }
-.circle_c_link {
+.modalBox01 .circle_c_link {
     width: 50%;
 }
 .modalBox01 .link-wrapper .LinkText {
